ep4/grammar.txt
expr            : KEYWORD:PUSH IDENTIFIER ARROW expr
                : comp-expr ((KEYWORD:&|KEYWORD:or) comp-expr)* 

comp-expr       : : comp-expr
                : arith-expr ((EE|LT|GT|LTE|GTE) arith-expr)*

arith-expr      : term ((PLUS|MINUS) term)*

term            : factor ((MUL|DIV) factor)*

factor          : (PLUS|MINUS) factor

power           : call (POW factor)*

call            : atom (LPAREN (expr (COMMA expr)*)? RPAREN)?

atom            : INT|FLOAT|IDENTIFIER|STRING
                : LPAREN expr RPAREN
                : if-expr
                : for-expr
                : while-expr
                : func-def
                : list-expr

if-expr         : KEYWORD:if expr KEYWORD:do expr
                    (KEYWORD:elif expr KEYWORD:do expr)*
                    (KEYWORD:else expr)?

list-expr       : LSQUARE (expr (COMMA expr)*)? RSQUARE

for-expr        : KEYWORD:for IDENTIFIER ARROW expr KEYWORD:until expr
                    (KEYWORD:inc expr)? KEYWORD:do expr

while-expr      : KEYWORD:while expr KEYWORD:do expr

func-def        : KEYWORD:define IDENTIFIER?
                    LPAREN (IDENTIFIER (COMMA IDENTIFIER)*)? RPAREN
                    ARROW expr
